--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pdg",
   "version": "0.1.0",
+  "homepage": "https://dagibu301.github.io/pdg",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -20,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
